--- a/movies.html
+++ b/movies.html
@@ -14,15 +14,15 @@ and open the template in the editor.
 <h2> Batman Movies</h2>
 </div>
        <div class="thumbnail" >
-<img src="C:\Users\nikita gupta\Desktop\batman_begins.gif" alt="Bruce Wayne">
+<img src="batman_begins.jpg" alt="Bruce Wayne">
 <h4> Batman Begins <br> (2005) </h4>
 </div>
 <div class="thumbnail">
-    <img src="C:\Users\nikita gupta\Desktop\dark_knight.gif" alt="Bruce Wayne" />
+    <img src="dark_knight.jpg" alt="Bruce Wayne" />
 <h4> The Dark Knight Begins <br> (2008) </h4>
 </div>
 <div class="thumbnail">
-<img src="C:\Users\nikita gupta\Desktop\dark_knight_r.gif" alt="Bruce Wayne" >
+<img src="dark_knight_r.jpg" alt="Bruce Wayne" >
 <h4> The Dark Knight Rises <br> (2012) </h4>
 </div>
     </body>
