--- a/navigation.html
+++ b/navigation.html
@@ -12,13 +12,13 @@ and open the template in the editor.
     <body>
         <div id="header">
             <a href="#" class="logo">
-                <img src="C:\Users\nikita gupta\Desktop\bat_logo.gif" alt="Batman">
+                <img src="bat_logo.png" alt="Batman">
             </a>
             <nav>
             <ul>
-                <li><a href="file:///C:/Users/nikita%20gupta/Desktop/web%20development/image.html">villains</a></li>
-                <li><a href="file:///C:/Users/nikita%20gupta/Desktop/web%20development/table.html">secret identity</a></li>
-                <li><a href="file:///C:/Users/nikita%20gupta/Desktop/web%20development/movies.html">movies</a></li>
+                <li><a href="image.html">villains</a></li>
+                <li><a href="table.html">secret identity</a></li>
+                <li><a href="movies.html">movies</a></li>
             </ul>
         
         </nav>
