--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="navigation.css">
 <link rel="stylesheet" type="text/css" href="necss.css">
     </head>
-  <body background="bat_cover.jpg" style="background-repeat:no-repeat;">
+  <body>
 <div id="header">
             <a href="#" class="logo">
                 <img src="C:\Users\nikita gupta\Desktop\bat_logo.png" alt="Batman">
