--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <div id="header">
             <a href="#" class="logo">
-                <img src="C:\Users\nikita gupta\Desktop\bat_logo.png" alt="Batman">
+                <img src="bat_logo.png" alt="Batman">
             </a>
             <nav>
             <ul>
@@ -35,7 +35,6 @@ batman first appeared in Dc comics in year 1938 and soon became popular</p>
 </div>
 <div>
 <center>
-<h4> Subscribe to our newsletter </h4>
 <input type="text">
 <input type="submit" value="Subscribe" id="subscribe">
 </center>
