--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <link rel="stylesheet" type="text/css" href="navigation.css">
 <link rel="stylesheet" type="text/css" href="necss.css">
     </head>
-  <body>
+  <body background="bat_cover.gif" style="background-repeat:no-repeat;">
 <div id="header">
-            <a href="#" class="logo">
+            
                 <img src="bat_logo.png" alt="Batman">
-            </a>
+           
             <nav>
             <ul>
                 <li><b><a href="image.html">villains</a></b></li>
