--- a/image.html
+++ b/image.html
@@ -11,7 +11,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>
-            <img src="wayne.png" alt="bruce wayne" id="image" >
+            <img src="wayne.PNG" alt="bruce wayne" id="image" >
         
 <p>Batman's secret identity is Bruce Wayne, a wealthy
 American industrialist who resides just outside of Gotham City. As a child, Bruce
