--- a/navigation.html
+++ b/navigation.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     <body>
         <div id="header">
             <a href="#" class="logo">
-                <img src="bat_logo.png" alt="Batman">
+                <img src="bat_logo.PNG" alt="Batman">
             </a>
             <nav>
             <ul>
