--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body background="bat_cover.gif" style="background-repeat:no-repeat;">
 <div id="header">
             
-                <img src="bat_logo.png" alt="Batman">
+                <img src="bat_logo.PNG" alt="Batman">
            
             <nav>
             <ul>
