--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Batsman page</title>
 <link rel="stylesheet" type="text/css" href="navigation.css">
 <link rel="stylesheet" type="text/css" href="necss.css">
     </head>
